# Hunzo-Server

./: .env.example  .env.local  LICENSE  ReadME  ReadME.md  TODO.md  docker-compose.yaml
0-nginx/: nginx.conf
1-users/: Dockerfile  ReadMe  go.mod  go.sum
1-users/src/: main.go
1-users/src/controller/users/: create.go
1-users/src/db/: db.go  mem-db.go  redis.go
1-users/src/db/services/: session_services.go  user_services.go
1-users/src/events/producer/: account-created.go  user_events.go
1-users/src/models/: browser.go  session.go  user.go
1-users/src/models/events/: user-created.go
1-users/src/server/: router.go
1-users/src/server/handlers/: account.go  active_session.go  check_session.go  login.go  logout.go  register.go  (+2 more)
1-users/src/utils/: access_token.go  cookie.go  rate_limiter.go  refresh_token.go
2-notification/: .env.example  Dockerfile  ReadMe.md  pyproject.toml
2-notification/app/: main.py
2-notification/app/api/: main.py  models.py  routes.py
2-notification/app/consumer/: kafka_consumer.py
2-notification/app/core/: config.py
2-notification/app/services/: email.py
3-wallet/: Dockerfile  go.mod  go.sum
3-wallet/src/: main.go
3-wallet/src/db/: db.go  redis.go  wallet.go
3-wallet/src/events/: kafka_init.go  list_topic.go  wallet-events.go
3-wallet/src/models/: wallet.go
3-wallet/src/server/: router.go
3-wallet/src/utils/: create-wallet.go
4-cards/: ReadMe
6-compliance-engine/: Cargo.toml  ReadMe
6-compliance-engine/src/: main.rs
infratructure/k8s/: users-depl.yaml  users.yaml.old
volume/cache/: machine.json
(+10 files in other folders)
