[tool.poetry]
name = "2-notification"
version = "0.1.0"
description = "Emails and Notifications"
authors = ["Hugh Scott <hughscott2002@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
confluent-kafka = ">=2.2.0"
sendgrid = "^6.11.0"
python-dotenv = "^1.0.1"
jinja2 = "^3.1.5"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
asgi-lifespan = "^2.1.0"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-api = "app.main:run_api"  # Optional for easy startup

[tool.pytest.ini_options]
pythonpath = ["app"]  # Allow tests to import from app/