[tool.poetry]
name = "fastapiservertest"
version = "0.1.0"
description = ""
authors = ["Hugh Scott <hughscott2002@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
